# azure-data-platform

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md
docs/user/: 1_Platform_Design.md  2_Platform_Requirements.md  3_Platform_Security.md  4_Platform_Naming_Conventions.md  5_Platform_FAQ.md  Data_Factory_Pipeline_Errors.md  File_Ingestion_Pipeline.md  Resource_Interactions.md  dbt Documentation.md
images/: Makefile  README.md
images/add_databricks_connect/: Dockerfile  ingenii_databricks_connect-1.0.0-py3-none-any.whl
images/add_quantum/: Dockerfile  ingenii_azure_quantum-0.1.0-py3-none-any.whl  ingenii_azure_quantum-0.2.0-py3-none-any.whl
images/blob_to_share/: Dockerfile
images/jupyterlab_singleuser/: Dockerfile  requirements.txt
scripts/: databricks_020_to_040.py
src/: requirements-common.txt  requirements-dev.txt  requirements.txt
src/platform-config/: defaults.dev.yml  defaults.shared.yml  (+2 more)
src/python/extensions/ingenii_adp_sql_results_server/: setup.cfg
src/python/extensions/ingenii_adp_sql_results_server/ingenii_adp_sql_results_server/: __init__.py
src/python/ingenii_azure_data_platform/: README.md  setup.cfg  setup.py
src/python/ingenii_azure_data_platform/ingenii_azure_data_platform/: config.py  databricks.py  defaults.py  iam.py  kubernetes.py  logs.py  management.py  network.py  orchestration.py  private_endpoints.py  storage.py  utils.py
src/python/ingenii_azure_data_platform/ingenii_azure_data_platform/clients/: config_registry.py
src/python/ingenii_azure_data_platform/ingenii_azure_data_platform/contracts/: packages.py
(+125 files in other folders)
