
[metadata]
name = ingenii_azure_data_platform
url = https://github.com/ingenii-solutions/azure-data-platform-python-package
author = Teodor Kostadinov
author_email = teodor@ingenii.dev
description = Configuration parsing and general utilities for the Ingenii Azure Data Platform IaC implementation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include =
    ingenii_azure_data_platform
    ingenii_azure_data_platform.contracts


[options.package_data]