[metadata]
name = ingenii_adp_sql_results_server
url = https://github.com/ingenii-solutions/azure-data-platform
author = Teodor Kostadinov
author_email = teodor@ingenii.dev
description = ADP package that deploys Azure SQL results server.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include =
    ingenii_adp_sql_results_server

[options.package_data]